# grocccing-the-coding-interview

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  README.md  add_problem.sh  remove_problem.sh
grocc/: CMakeLists.txt  test_case_generator.h
grocc/two_sum/: two_sum.c  two_sum_test_cases.h
groccc/: CMakeLists.txt  hash_helpers.c  hash_helpers.h  loggers.h  run_problems.c  string_arena.c  test_case_generator.h
groccc/daily_temperatures/: daily_temperatures.c  daily_temperatures_test_cases.h  daily_temperatures_tests.h
groccc/group_anagrams/: group_anagrams.c  group_anagrams_test_cases.h  group_anagrams_tests.h
groccc/largest_rectangle_in_histogram/: largest_rectangle_in_histogram.c  largest_rectangle_in_histogram_tests.h
groccc/longest_consecutive_sequence/: longest_consecutive_sequence.c  longest_consecutive_sequence_test_cases.h  longest_consecutive_sequence_tests.h
groccc/top_k_frequent_elements/: top_k_frequent_elements.c
groccc/trapping_rainwater/: trapping_rainwater.c  trapping_rainwater_test_cases.h  trapping_rainwater_tests.h
groccc/two_sum/: two_sum.c  two_sum_test_cases.h  two_sum_tests.h
groccc/valid_sudoku/: valid_sudoku.c
tools/: scanners.cmake
utility/: CMakeLists.txt  hash_helpers.c  hash_helpers.h  loggers.h  string_arena.h  test_case_generator.h
